syntax = "proto3";

package log.v1;

option go_package = "github.com/gcleroux/projet-A23/api/log_v1";

service Log {
    // Endpoints declaration
    rpc Write(WriteRequest) returns (WriteResponse) {}
    rpc Read(ReadRequest) returns (ReadResponse) {}
    rpc ReadStream(ReadRequest) returns (stream ReadResponse) {}
    rpc WriteStream(stream WriteRequest) returns (stream WriteResponse) {}
    rpc GetServers(GetServersRequest) returns (GetServersResponse) {}
}

message WriteRequest { Record record = 1; }

message WriteResponse { uint64 offset = 1; }

message ReadRequest { uint64 offset = 1; }

message ReadResponse { Record record = 1; }

message Record {
    bytes value = 1;
    uint64 offset = 2;
    uint64 term = 3;
    uint32 type = 4;
    string server = 5;
}

message GetServersRequest {}

message GetServersResponse { repeated Server servers = 1; }

message Server {
    string id = 1;
    string rpc_addr = 2;
    bool is_leader = 3;
}
